    - Targets the area within 16 radius of any rocket-silo, artillery or mining-drill.
    - Dropship squad is always a precision strike squad.
    - Flying units squad can be configure to have this feature.  Default to OFF.
    - Strike location will be warn on the map. This option can be turn off.  Default to ON.
    - ---- END Squad Subtype: Precision Strike Squad ----

  Changes:
    - Special Attack Group can now configure to spawn at certain interval (1, 2, default 5, 10) minutes.
    - 2 race split: the no man's land gap increase to 4 chunks to cope for free for all mode
    - Disabled health regen for all units. Turrets and spawners are not units and not affected.
    - Add 1.25x to max health for units to balance the health regen when race level > 1.
    - construction & logistic robots immune fire when player defence enhance option is on.
    - change how spawn chance are calculated for flying units squad
    - change attack meter threshold to use formular based on max group size, instead of fixed value.


---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 2021-08-12

  Features:
    - Compatibility for New Game Plus.
    - When the game resets, attack meter also reset.
    - When "reset evolution factor" is checked, level, tier and evolution points are preserved. Evolution factor and attack meter get reset.
    - When "reset research" is checked, everything reset.
    - Add "level up accelerator" option to accelerate level up by killing unit and turrets. It defaults to ON.
    - The point is based on 1% of spawner destroy factor for each killed units and 10% of spawner destroy factor for each killed turrets
    - level 10+ should play with "level up accelerator" enabled.

  Changes:
    - New experience curve for Level 4 - 20.
    - Evolution points: 12, 25, 45, 70, 115, 175, 250, 350, 450, 600, 750, 900, 1200, 1600, 2200, 3000, 4000