@@ -70,7 +70,7 @@ enemyracemanager-evolution-point-accelerator=Killed Units and turrets are now co
 enemyracemanager-evolution-point-multipliers=This multiplier applies to all values which use to calculate evolution points. \nRange: 0.1 - 10
 
 enemyracemanager-attack-meter-enable=Enable attack meters.  When attack meter reach its threshold, the race will send out an attack group to attack its enemy's military entities.
-enemyracemanager-attack-meter-threshold=Threshold multiplier for spawning attack group. \nFormula: MAX_GROUP_SIZE * THRESHOLD_MULTIPLIER * 20. Default setting is 3000 points.\nMeter gets 1p/killed unit, 10p/killed turret and 50p/killed spawner. \nMixed attack group consumes 20p/unit. Flying squad consumes 75p/unit. Dropship squad consumes 150p/unit\nRange: 1 - 10
+enemyracemanager-attack-meter-threshold=Threshold multiplier for spawning attack group. \nFormula: MAX_GROUP_SIZE * THRESHOLD_MULTIPLIER * 20. Default setting is 3000 points.\nMeter gets 1p/killed unit, 10p/killed turret and 50p/killed spawner. \nMixed attack group consumes 20p/unit. Flying squad consumes 75p/unit. Dropship squad consumes 150p/unit\nRange: 1 - 5
 enemyracemanager-attack-meter-threshold-deviation=Threshold deviation percentage.
 enemyracemanager-flying-squad-enable=Enable flying attack group.  They fly straight to their targeted entity.
 enemyracemanager-flying-squad-chance=Flying squad spawn chance.
